--- a/views/results.ejs
+++ b/views/results.ejs
@@ -1,5 +1,21 @@
-<h1>Results Page</h1>
-<% data["Search"].forEach(function(movie){ %>
-	<p> <%= movie["Title"] %> - <%= movie["Year"] %> </p>	 
+<% include partials/header %>
 
-<% }); %>
+<div class="container-fluid bg text-center">
+	<div class="row text-center">
+		<h1 class="white">Results</h1>
+		<hr>
+	</div>
+	<div class="row">
+		<% data["Search"].forEach(function(movie){ %>
+		<div class="col-lg-3 col-md-4 col-sm-6">
+			<img  class="img-thumbnail"src="<%=movie["Poster"]%>">
+			<p> <strong> <%= movie["Title"] %></strong> - <%= movie["Year"] %> </p>	 	
+		</div>
+
+		<% }); %>	
+	</div>
+<a class="btn btn-primary" href="/">Back</a>	
+</div>
+
+
+<% include partials/footer %>
