--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,6 +1,29 @@
-<h1>Movie Search</h1>
+<% include partials/header %>
 
-<form action="/results" method="GET">
-	<input type="text" name="search" placeholder="Search Title">
-	<input type="submit">
-</form>
+<div class="container-fluid text-center bg">
+
+	<div class="row">
+		<div class="col-lg-12">
+			<br><br>
+			<h1>Movie Search</h1>
+			<hr>
+			<br>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-lg-12">
+			<div class="form-group">
+				<form action="/results" method="GET">
+					<input class="form-control" type="text" name="search" placeholder="Search Title">
+					<br>
+					<input type="submit">
+				</form>	
+			</div>	
+		</div>
+		
+	</div>
+
+</div>
+
+<% include partials/footer %>
